# Boost

./: .travis.yml  CMakeLists.txt  README.md
include/: fileparser.h  inputdata.h  lib.h
src/: bayan.cpp  fileparser.cpp
test/: gtest.cpp
